# gencam_web

./: Cargo.toml  README.MD
assets/: .gitignore  README.md  index.html
egui_demo_lib/: Cargo.toml
gencam_web/: Cargo.toml  README.md
gencam_web/src/: egui_dock_hello.rs  lib.rs  main.rs  web.rs
gencam_wsock_server/: Cargo.toml
gencam_wsock_server/src/: main.rs
scripts/: build_server.sh  build_web_server.sh  clippy_wasm.sh  start_server.sh  wasm_bindgen_check.sh  wasm_size.sh
