[workspace]
resolver = "2"
members = [
    "egui_demo_lib",
    "gencam_web",
    "gencam_wsock_server",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
version = "0.28.1"


[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unnecessarily large wasm for no performance gain

# debug = true # include debug symbols, useful when profiling wasm

panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).


[profile.dev]
# Can't leave this on by default, because it breaks the Windows build. Related: https://github.com/rust-lang/cargo/issues/4897
# split-debuginfo = "unpacked" # faster debug builds on mac
# opt-level = 1                # Make debug builds run faster

# panic = "abort" leads to better optimizations and smaller binaries (and is the default in Wasm anyways),
# but it also means backtraces don't work with the `backtrace` library (https://github.com/rust-lang/backtrace-rs/issues/397).
# egui has a feature where if you hold down all modifiers keys on your keyboard and hover any UI widget,
# you will see the backtrace to that widget, and we don't want to break that feature in dev builds.

[profile.dev.package."*"]
# Optimize all dependencies even in debug builds (does not affect workspace packages):
opt-level = 2


[workspace.dependencies]
emath = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
ecolor = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
epaint = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
epaint_default_fonts = { git = "https://github.com/mitbailey/egui", branch = "gencam" }
egui = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui-winit = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui_extras = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui-wgpu = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui_demo_lib = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui_glow = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
eframe = { git = "https://github.com/mitbailey/egui", branch = "gencam", default-features = false }
egui_dock = { git = "https://github.com/mitbailey/egui_dock", branch = "gencam", default-features = false}
ewebsock = { version = "0.6", default-features = false }

ahash = { version = "0.8.11", default-features = false, features = [
    "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
    "std",
] }
backtrace = "0.3"
bytemuck = "1.7.2"
criterion = { version = "0.5.1", default-features = false }
document-features = " 0.2.8"
glow = "0.14"
glutin = "0.32.0"
glutin-winit = "0.5.0"
home = "0.5.9"
image = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["std"] }
nohash-hasher = "0.2"
parking_lot = "0.12"
puffin = "0.19"
puffin_http = "0.16"
ron = "0.8"
raw-window-handle = "0.6.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
tungstenite = { version = "0.23.0" }
web-time = "1.1.0" # Timekeeping for native and web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
wgpu = { version = "22.1.0", default-features = false }
windows-sys = "0.52"
winit = { version = "0.30.5", default-features = false }